--- a/app.json
+++ b/app.json
@@ -42,6 +42,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "ac395f38-aac6-41dd-a027-d10d11c24cd8"
+      }
     }
   }
 }
